<resources>
    <string name="app_name">Tport</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="path_finding">길찾기</string>
    <string name="search_hint">장소, 버스, 지하철, 주소 검색</string>
    <string name="edit_orgin">출발지 입력</string>
    <string name="edit_destination">도착지 입력</string>
    <string name="move_to">▼\n▽\n▼\n▽\n▼\n▽</string>
    <string name="up_button">upbutton</string>
    <string name="arrival">도착</string>
    <string name="naver_path">네이버 경로순</string>
    <string name="tport_path">Tport 경로순</string>
    <string name="reserve">예약</string>
    <string name="login">로그인</string>
    <string name="user_name">사용자 이름</string>
    <string name="password">비밀번호</string>
    <string name="present_reservation_data">예약 현황</string>
    <string name="forecasted_waiting_time">예상 대기시간</string>
    <string name="forecasted_bus_stop_data">예상 승차정보</string>
</resources>